--- a/public/css/category.css
+++ b/public/css/category.css
@@ -48,8 +48,8 @@
 
     select{
         border: none;
-        font-size : 14px;
-        padding-bottom : 15px;
+        font-size : 16px;
+        margin-bottom : 15px;
     }
 
     option[disabled]{
