--- a/public/css/mypage.css
+++ b/public/css/mypage.css
@@ -1,38 +1,68 @@
-.post{
+.logo {
+    width: auto;
+    height: 62px;
+  }
+
+  .menu-container {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    max-width: 988px;
+    left: 0;
+    right: 0;
+    background-color: white;
+    padding-top: 10px;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    padding : 0 25px;
+    justify-content: space-between;
+    align-items: center;
+    margin-bottom: 50px;
+    margin-left: auto;
+    margin-right: auto;
+    z-index: 9998
+  }
+
+#logout .addPost{
+    color: white;
+    background-color: black;
+    padding : 10px 20px;
+    border-radius : 10px;
+    font-weight : bold;
+    margin-right: 40px;
 }
+
+.select-menu {
+    margin-bottom : 35px;
+}
+
+.select-menu button{
+    font-size : 20px;
+    font-weight: bold;
+    background-color : #00000000;
+    border : none;
+    margin-right : 57px;
+    cursor : pointer;
+    padding : 0;
+}
+
 
 .profile{
     font-size : 16px;
 }
 
-.profile h4{
-    font-size : 18px;
-}
-
-.post p{
-    display : inline;
-    font-weight: bold;
-}
-
-.post button{
-    font-size : 14px;
-    border-radius : 5px;
-    border : 1px solid #d9d9d9;
-    right : 0;
-    background-color : #00000000;
-    padding: 5px 10px;
-    cursor: pointer;
-}
 
 .modify-post{
     display: flex;
     justify-content: space-between;
     align-items : center;
     padding : 5px 0;
+}
+
+.modify-profile.deactive{
+    display: none;
+}
+h4{
+    font-size : 20px;
+    margin: 20px 0;
 }
 
 .add{
@@ -50,15 +80,15 @@
 }
 
 #image-show{
-    width:300px;
-    height: 231px;
+    width:280px;
+    height: 227px;
     background-color: #d9d9d9;
     border-radius:10px;
 }
 
 #image-show img{
-    width: 300px;
-    height: 231px;
+    width: 280px;
+    height: 227px;
     border-radius: 10px;
 }
 
@@ -70,31 +100,30 @@
 }
 
 .profile-image label{
-    margin: 14px;
-    padding: 5px 10px;
     background-color: white;
     border-radius : 5px;
     border : 1px solid #999999;
+    margin-top : 28px;
+    padding: 10px 30px;
+    font-size : 14px;
+    cursor : pointer;
 }
 
 .profileChange{
     display:flex;
     flex-direction:row;
-    justify-content : space-start;
-    padding: 0 25px;
+    justify-content : space-between;
 }
 
 .profile-info{
-    margin: 0 auto;
+    
     width : 50%;
 }
 
 form p,
 form input {
-  display: inline-block;
   vertical-align: top;
   margin: 0;
-  padding: 15px 5px; /* 패딩을 좁게 설정 */
   width: calc(50% - 50px); /* 전체 너비의 절반에서 마진과 패딩을 뺀 값 */
   box-sizing: border-box;
   margin-bottom: 20px;
@@ -103,17 +132,18 @@ form input {
 
 form p {
   text-align: left; 
-  padding: 5px 10px;
-  width:30%
+  width:30%;
+  font-weight : bold;
 
+margin-bottom : 12px;
 }
 
 form input{
-    padding-top:5px;
-    padding-bottom:5px;
+    margin-bottom: 38px;
     border-radius : 5px;
     border : 1px solid #999999;
-    width: 50%;
+    width: 100%;
+    height: 38px;
 }
 
 input[name="introduce"] {
@@ -123,12 +153,13 @@ input[name="introduce"] {
   }
   
 form textarea{
-    width: 49%;
+    width: 100%;
     border-radius : 5px;
     border : 1px solid #999999;
-    margin-bottom: 20px;
+    margin-bottom: 38px;
     resize: none;
 }
+
 
 form select{
     
@@ -136,5 +167,72 @@ form select{
     padding-bottom:5px;
     border-radius : 5px;
     border : 1px solid #999999;
-    width: 50%;
+    width: 100%;
+    height : 38px;
 }
+
+input[type="submit"]{
+    transform: translateX(-50%);
+    background-color:#d9d9d9;
+    color: white;
+    border : none;
+}
+
+select{
+    margin-bottom: 84px;
+}
+
+input[type="submit"].active{
+    background-color: black;
+    cursor: pointer;
+}
+
+.post.deactive{
+    display : none;
+}
+
+.one-post{
+    border-top : 1px solid #d9d9d9;
+    border-bottom : 1px solid #d9d9d9;
+    display : flex;
+    flex-direction : row;
+    justify-content : space-between;
+    align-items : center;
+    padding : 32px 0;
+    font-size : 16px;
+}
+
+.post-image{
+    width: 179px;
+    height : 118px;
+    border-radius : 10px;
+    border : none;
+    background-color : #d9d9d9;
+}
+
+.button-container{
+    display : flex;
+    flex-direction : row;
+}
+
+.button-container button{
+    border-radius : 10px;
+    border : 1px solid #d9d9d9;
+    padding : 5px 10px;
+    background-color : white;
+    margin-right : 3px;
+    cursor: pointer;
+}
+
+.heart{
+    display : flex;
+    flex-direction : column;
+    justify-content : center;
+    align-items : center;
+}
+
+.heart p{
+    font-size : 10px;
+    color : #8a8a8a;
+}
+
