--- a/app/src/views/home/login.ejs
+++ b/app/src/views/home/login.ejs
@@ -154,7 +154,7 @@
             </div>
         </div>
     </div>
-    <script src="/js/home/home.js"></script>
+    <script src="/js/home/login.js"></script>
     <script src="/js/home/global.js"></script>
 </body>
 
